[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyberpublisher"
version = "1.0.2"
description = "CLI publishing tool for template-driven flat-file output, validation, and optional remote deployment"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Gilray4", email = "cyberfluence@gmail.com"}]
license = {text = "GPL-3.0"}
keywords = ["publishing", "flat-file", "template-driven", "cli", "deployment", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]

dependencies = [
    "cryptography>=41.0.0",
    "jinja2>=3.0.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
cyberpublisher = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pypub*", "pypub_utils*", "publisher_core*", "validator_core*", "mapper_core*"]

[tool.setuptools]
py-modules = ["cli"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"